Se agrega tabla para guardar cupos y se agrega campo de puntaje_total en la inscripcion
