# models/cupos_por_dependencia.go
@@ -10,57 +10,49 @@ import (
 	"github.com/astaxie/beego/orm"
 )
 
-type Inscripcion struct {
-	Id                  int                `orm:"column(id);pk;auto"`
-	PersonaId           int                `orm:"column(persona_id)"`
-	ProgramaAcademicoId int                `orm:"column(programa_academico_id)"`
-	ReciboMatriculaId   int                `orm:"column(recibo_matricula_id);null"`
-	ReciboInscripcionId int                `orm:"column(recibo_inscripcion_id);null"`
-	PeriodoId           int                `orm:"column(periodo_id)"`
-	EnfasisId           int                `orm:"column(enfasis_id);null"`
-	AceptaTerminos      bool               `orm:"column(acepta_terminos)"`
-	FechaAceptaTerminos time.Time          `orm:"column(fecha_acepta_terminos);type(date)"`
-	TipoInscripcionId   *TipoInscripcion   `orm:"column(tipo_inscripcion_id);rel(fk)"`
-	EstadoInscripcionId *EstadoInscripcion `orm:"column(estado_inscripcion_id);rel(fk)"`
-	PuntajeTotal        float64            `orm:"column(puntaje_total);null"`
-	Activo              bool               `orm:"column(activo)"`
-	FechaCreacion       time.Time          `orm:"column(fecha_creacion);type(timestamp without time zone);auto_now_add"`
-	FechaModificacion   time.Time          `orm:"column(fecha_modificacion);type(timestamp without time zone);auto_now"`
+type CuposPorDependencia struct {
+	Id                int       `orm:"column(id);pk"`
+	DependenciaId     int       `orm:"column(dependencia_id)"`
+	CuposHabilitados  int       `orm:"column(cupos_habilitados)"`
+	CuposOpcionados   int       `orm:"column(cupos_opcionados)"`
+	Activo            bool      `orm:"column(activo)"`
+	FechaCreacion     time.Time `orm:"column(fecha_creacion);type(timestamp without time zone)"`
+	FechaModificacion time.Time `orm:"column(fecha_modificacion);type(timestamp without time zone)"`
 }
 
-func (t *Inscripcion) TableName() string {
-	return "inscripcion"
+func (t *CuposPorDependencia) TableName() string {
+	return "cupos_por_dependencia"
 }
 
 func init() {
-	orm.RegisterModel(new(Inscripcion))
+	orm.RegisterModel(new(CuposPorDependencia))
 }
 
-// AddInscripcion insert a new Inscripcion into database and returns
+// AddCuposPorDependencia insert a new CuposPorDependencia into database and returns
 // last inserted Id on success.
-func AddInscripcion(m *Inscripcion) (id int64, err error) {
+func AddCuposPorDependencia(m *CuposPorDependencia) (id int64, err error) {
 	o := orm.NewOrm()
 	id, err = o.Insert(m)
 	return
 }
 
-// GetInscripcionById retrieves Inscripcion by Id. Returns error if
+// GetCuposPorDependenciaById retrieves CuposPorDependencia by Id. Returns error if
 // Id doesn't exist
-func GetInscripcionById(id int) (v *Inscripcion, err error) {
+func GetCuposPorDependenciaById(id int) (v *CuposPorDependencia, err error) {
 	o := orm.NewOrm()
-	v = &Inscripcion{Id: id}
+	v = &CuposPorDependencia{Id: id}
 	if err = o.Read(v); err == nil {
 		return v, nil
 	}
 	return nil, err
 }
 
-// GetAllInscripcion retrieves all Inscripcion matches certain condition. Returns empty list if
+// GetAllCuposPorDependencia retrieves all CuposPorDependencia matches certain condition. Returns empty list if
 // no records exist
-func GetAllInscripcion(query map[string]string, fields []string, sortby []string, order []string,
+func GetAllCuposPorDependencia(query map[string]string, fields []string, sortby []string, order []string,
 	offset int64, limit int64) (ml []interface{}, err error) {
 	o := orm.NewOrm()
-	qs := o.QueryTable(new(Inscripcion)).RelatedSel()
+	qs := o.QueryTable(new(CuposPorDependencia))
 	// query k=v
 	for k, v := range query {
 		// rewrite dot-notation to Object__Attribute
@@ -110,7 +102,7 @@ func GetAllInscripcion(query map[string]string, fields []string, sortby []string
 		}
 	}
 
-	var l []Inscripcion
+	var l []CuposPorDependencia
 	qs = qs.OrderBy(sortFields...)
 	if _, err = qs.Limit(limit, offset).All(&l, fields...); err == nil {
 		if len(fields) == 0 {
@@ -133,11 +125,11 @@ func GetAllInscripcion(query map[string]string, fields []string, sortby []string
 	return nil, err
 }
 
-// UpdateInscripcion updates Inscripcion by Id and returns error if
+// UpdateCuposPorDependencia updates CuposPorDependencia by Id and returns error if
 // the record to be updated doesn't exist
-func UpdateInscripcionById(m *Inscripcion) (err error) {
+func UpdateCuposPorDependenciaById(m *CuposPorDependencia) (err error) {
 	o := orm.NewOrm()
-	v := Inscripcion{Id: m.Id}
+	v := CuposPorDependencia{Id: m.Id}
 	// ascertain id exists in the database
 	if err = o.Read(&v); err == nil {
 		var num int64
@@ -148,15 +140,15 @@ func UpdateInscripcionById(m *Inscripcion) (err error) {
 	return
 }
 
-// DeleteInscripcion deletes Inscripcion by Id and returns error if
+// DeleteCuposPorDependencia deletes CuposPorDependencia by Id and returns error if
 // the record to be deleted doesn't exist
-func DeleteInscripcion(id int) (err error) {
+func DeleteCuposPorDependencia(id int) (err error) {
 	o := orm.NewOrm()
-	v := Inscripcion{Id: id}
+	v := CuposPorDependencia{Id: id}
 	// ascertain id exists in the database
 	if err = o.Read(&v); err == nil {
 		var num int64
-		if num, err = o.Delete(&Inscripcion{Id: id}); err == nil {
+		if num, err = o.Delete(&CuposPorDependencia{Id: id}); err == nil {
 			fmt.Println("Number of records deleted in database:", num)
 		}
 	}
