# routers/router.go
@@ -45,6 +45,12 @@ func init() {
 				&controllers.TipoProyectoController{},
 			),
 		),
+
+		beego.NSNamespace("/cupos_por_dependencia",
+			beego.NSInclude(
+				&controllers.CuposPorDependenciaController{},
+			),
+		),
 	)
 	beego.AddNamespace(ns)
 }
